#post circulars implementation

--- a/app/src/main/res/menu/activity_student_dash_board_drawer.xml
+++ b/app/src/main/res/menu/activity_student_dash_board_drawer.xml
@@ -30,6 +30,11 @@
             android:icon="@drawable/ic_menu_slideshow"
             android:title="Change Password" />
         <item
+            android:id="@+id/nav_post_circular"
+            android:icon="@drawable/ic_menu_manage"
+            android:title="Post Circular"/>
+
+        <item
             android:id="@+id/nav_logout"
             android:icon="@drawable/ic_menu_manage"
             android:title="Logout"/>
