#post circulars implementation, marks and attendence implementation

--- a/app/src/main/res/layout/fragment_post_circular.xml
+++ b/app/src/main/res/layout/fragment_post_circular.xml
@@ -25,7 +25,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_weight="2"
         android:padding="@dimen/margin_16"
         android:background="@color/white">
 
@@ -38,10 +38,46 @@
             android:background="@drawable/button_round"
             android:layout_marginTop="@dimen/margin_16"
             android:textColor="@android:color/white"
-            android:layout_centerInParent="true"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Select or Capture Image" />
 
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+           android:id="@+id/post_title"
+            android:layout_marginTop="@dimen/dp_24"
+            android:layout_below="@+id/select_or_capture"
+            android:layout_height="wrap_content">
+            <android.support.design.widget.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/title"
+                android:hint="Enter Title"/>
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:id="@+id/post_discription"
+            android:layout_marginTop="@dimen/dp_24"
+            android:layout_below="@+id/post_title"
+            android:layout_height="wrap_content">
+            <android.support.design.widget.TextInputEditText
+                android:layout_width="match_parent"
+                android:id="@+id/disc"
+                android:layout_height="wrap_content"
+                android:hint="Enter discription"/>
+        </android.support.design.widget.TextInputLayout>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/post_circular_btn"
+            android:layout_marginTop="@dimen/dp_24"
+            android:padding="@dimen/margin_5"
+            android:background="@drawable/button_round"
+            android:textColor="@android:color/white"
+            android:layout_below="@+id/post_discription"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Post Circular" />
     </RelativeLayout>
 
 
