--- a/app/src/main/res/layout/fragment_student_attendence.xml
+++ b/app/src/main/res/layout/fragment_student_attendence.xml
@@ -5,148 +5,104 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:id="@+id/activity_main"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:weightSum="1"
-        tools:context="com.siddhu.capp.ui.fragments.StudentAttendenceFragment">
+        android:layout_margin="@dimen/dp_12"
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:id="@+id/branch_spinner_lyt"
+            android:layout_marginTop="@dimen/dp_12"
+            android:weightSum="2">
 
-            <TextView
-                android:id="@+id/branch"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginLeft="30dp"
-                android:layout_marginTop="20dp"
-                android:text="BRANCH"
-                android:textSize="18sp" />
-
-            <Spinner
-                android:id="@+id/branchspinner"
-                android:layout_width="wrap_content"
-                android:layout_height="36dp"
-                android:layout_marginLeft="32dp"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="28dp"
-                android:layout_weight="0.71" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/sem"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="32dp"
-                android:paddingRight="30dp"
-                android:text="SEM"
-                android:textSize="18sp" />
-
-            <Spinner
-                android:id="@+id/semspinner"
-                android:layout_width="wrap_content"
-                android:layout_height="36dp"
-                android:layout_marginBottom="28dp"
-                android:layout_marginLeft="32dp"
-                android:layout_marginStart="32dp"
-                android:layout_weight="0.71" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/semspinner"
-            android:layout_marginTop="0dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/date"
-                android:layout_width="100dp"
-                android:layout_height="32dp"
-                android:layout_marginLeft="10dp"
-                android:text="DATE"
-                android:textAlignment="center"
-                android:textSize="18sp" />
-
-            <EditText
-                android:id="@+id/date1"
-                android:layout_width="80dp"
-                android:layout_height="wrap_content"
-                android:inputType="date" />
-
-            <TextView
-                android:id="@+id/to"
-                android:layout_width="60dp"
-                android:layout_height="32dp"
-                android:text="TO"
-                android:textAlignment="center"
-                android:textSize="18sp" />
-
-            <EditText
-                android:id="@+id/date2"
-                android:layout_width="80dp"
-                android:layout_height="wrap_content"
-                android:inputType="date" />
-
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/date"
-            android:layout_marginTop="0dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/between"
-                android:layout_width="100dp"
-                android:layout_height="32dp"
-                android:layout_marginLeft="10dp"
-                android:text="% BETWEEN"
-                android:textAlignment="center"
-                android:textSize="18sp" />
-
-            <EditText
-                android:id="@+id/between1"
-                android:layout_width="80dp"
-                android:layout_height="wrap_content"
-                android:inputType="number" />
-
-            <TextView
-                android:id="@+id/and"
-                android:layout_width="60dp"
-                android:layout_height="32dp"
-                android:text="AND"
-                android:textAlignment="center"
-                android:textSize="18sp" />
-
-            <EditText
-                android:id="@+id/and1"
-                android:layout_width="80dp"
-                android:layout_height="wrap_content"
-                android:inputType="number" />
-        </LinearLayout>
-
-        <Button
+        <android.support.v7.widget.AppCompatTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="30dp"
-            android:text="SUBMIT" />
+            android:layout_weight="1"
+            android:id="@+id/select_branch"
+            android:textColor="@color/colorAccent"
+            android:textSize="@dimen/font_16sp"
+            android:text="Select Branch "/>
+        <Spinner
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/stu_att_branch_spinner"
+            android:layout_weight="1"
+            >
+
+        </Spinner>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/semester_lyt"
+            android:layout_marginTop="@dimen/dp_16"
+            android:layout_below="@+id/branch_spinner_lyt"
+            android:weightSum="2">
+
+            <android.support.v7.widget.AppCompatTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:id="@+id/select_semester"
+                android:textColor="@color/colorAccent"
+                android:textSize="@dimen/font_16sp"
+                android:text="Select Semester "/>
+            <Spinner
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/stu_att_semester_spinner"
+                android:layout_weight="1"
+                >
+
+            </Spinner>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_16"
+            android:id="@+id/year_lyt"
+            android:layout_below="@+id/semester_lyt"
+            android:weightSum="2">
+
+            <android.support.v7.widget.AppCompatTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:id="@+id/select_year"
+                android:textColor="@color/colorAccent"
+                android:textSize="@dimen/font_16sp"
+                android:text="Select Year "/>
+            <Spinner
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/stu_att_year_spinner"
+                android:layout_weight="1"
+                >
+
+            </Spinner>
+        </LinearLayout>
+        <android.support.v7.widget.AppCompatButton
+            android:text="Submit"
+            style="@style/button_round"
+            android:id="@+id/submit_btn"
+            android:layout_marginTop="@dimen/dp_16"
+            android:layout_below="@+id/year_lyt"/>
+
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/list_attendence"
+            android:layout_marginTop="@dimen/dp_24"
+            android:layout_below="@+id/submit_btn">
+
+        </android.support.v7.widget.RecyclerView>
+
+    </RelativeLayout>
 
 
-    </LinearLayout>
+
 </ScrollView>
