--- a/app/src/main/res/menu/activity_hod_dash_board_drawer.xml
+++ b/app/src/main/res/menu/activity_hod_dash_board_drawer.xml
@@ -25,7 +25,7 @@
         <item
             android:id="@+id/nav_classengaged"
             android:icon="@drawable/ic_menu_class"
-            android:title="Class Engaged Details" />
+            android:title="Post Circulars" />
         <item
             android:id="@+id/nav_busy"
             android:icon="@drawable/ic_menu_busy"
@@ -33,7 +33,7 @@
         <item
             android:id="@+id/nav_dropbox"
             android:icon="@drawable/ic_menu_dropbox"
-            android:title="Drop Box" />
+            android:title="Stdent Marks" />
 
         <item
             android:id="@+id/nav_results"
